# rust-blog

./: .env  README.md
client/: Cargo.toml  Trunk.toml  index.html
client/src/: app.rs  fetch.rs  main.rs
client/src/components/: card.rs  container.rs  home.rs  mod.rs  not_found.rs
client/src/components/article/: articles.rs
client/src/models/: article.rs
server/: Cargo.toml  test.html
server/src/: errors.rs  main.rs
server/src/article/: delete.rs  edit.rs  mod.rs  new.rs  search.rs  view.rs
server/src/comment/: delete.rs  new.rs  view.rs
server/src/middlewares/: auth.rs
server/src/models/: article.rs  comment.rs  user.rs
server/src/user/: login.rs
