[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0" # 提供了在web-sys的原始JS API绑定之上的API封装，能够更方便的编写WASM程序
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
wasm-bindgen-futures = "0.4.34" # 能够将Rust的Future转为JS的Promise
web-sys = {version = "0.3.60", features = ["Window", "Document"]}
yew = {version = "0.20.0", features = ["csr"]}
yew-router = "0.17.0"