[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
ntex = {version = "0.6.0", features = ["cookie", "tokio", "rustls"]}
chrono = {version = "0.4.23", features = ["serde"]}
dotenvy = "0.15.6"
serde = {version = "1.0.152"}
serde_json = "1.0.91"
cookie = "0.17.0"
reqwest = {version = "0.11.14", features = ["json"]}
sqlx = {version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
]}